@@ -29,6 +29,8 @@ PHP                                                                        NEWS
   is passed. (Tony)
 - Fixed posix_getsid() & posix_getpgid() to return sid & pgid instead 
   of true. (Tony)   
+- Fixed bug #32160 (file truncation in copy() when source & destination are
+  the same). (Ilia)
 - Fixed bug #32130 (ArrayIterator::seek() does not throw an Exception on 
   invalid index). (Marcus)
 - Fixed bug #32081 (in mysqli default socket value is not being used). (Ilia)
